@@ -376,6 +376,8 @@ name|ClusterState
 operator|.
 name|load
 argument_list|(
+literal|null
+argument_list|,
 name|bytes
 argument_list|,
 name|liveNodes
@@ -485,6 +487,8 @@ name|ClusterState
 operator|.
 name|load
 argument_list|(
+literal|null
+argument_list|,
 operator|new
 name|byte
 index|[
@@ -530,6 +534,8 @@ name|ClusterState
 operator|.
 name|load
 argument_list|(
+literal|null
+argument_list|,
 operator|(
 name|byte
 index|[]
