@@ -170,6 +170,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|data
+operator|.
+name|Stat
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -211,6 +224,11 @@ name|ClusterState
 operator|.
 name|class
 argument_list|)
+decl_stmt|;
+DECL|field|zkClusterStateVersion
+specifier|private
+name|Integer
+name|zkClusterStateVersion
 decl_stmt|;
 DECL|field|collectionStates
 specifier|private
@@ -298,10 +316,49 @@ argument_list|>
 argument_list|>
 argument_list|()
 decl_stmt|;
+comment|/**    * Use this constr when ClusterState is meant for publication.    *     * hashCode and equals will only depend on liveNodes and not clusterStateVersion.    *     * @param liveNodes    * @param collectionStates    */
 DECL|method|ClusterState
 specifier|public
 name|ClusterState
 parameter_list|(
+name|Set
+argument_list|<
+name|String
+argument_list|>
+name|liveNodes
+parameter_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Slice
+argument_list|>
+argument_list|>
+name|collectionStates
+parameter_list|)
+block|{
+name|this
+argument_list|(
+literal|null
+argument_list|,
+name|liveNodes
+argument_list|,
+name|collectionStates
+argument_list|)
+expr_stmt|;
+block|}
+comment|/**    * Use this constr when ClusterState is meant for consumption.    *     * @param zkClusterStateVersion    * @param liveNodes    * @param collectionStates    */
+DECL|method|ClusterState
+specifier|public
+name|ClusterState
+parameter_list|(
+name|Integer
+name|zkClusterStateVersion
+parameter_list|,
 name|Set
 argument_list|<
 name|String
@@ -616,7 +673,7 @@ block|}
 block|}
 block|}
 block|}
-comment|/** 	 * Get properties of a shard leader for specific collection. 	 */
+comment|/**    * Get properties of a shard leader for specific collection.    */
 DECL|method|getLeader
 specifier|public
 name|ZkNodeProps
@@ -662,7 +719,7 @@ name|shard
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Get shard properties or null if shard is not found. 	 */
+comment|/**    * Get shard properties or null if shard is not found.    */
 DECL|method|getShardProps
 specifier|public
 name|ZkNodeProps
@@ -853,7 +910,7 @@ argument_list|)
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Get collection names. 	 */
+comment|/**    * Get collection names.    */
 DECL|method|getCollections
 specifier|public
 name|Set
@@ -875,7 +932,7 @@ argument_list|()
 argument_list|)
 return|;
 block|}
-comment|/** 	 * @return Map&lt;collectionName, Map&lt;sliceName,Slice&gt;&gt; 	 */
+comment|/**    * @return Map&lt;collectionName, Map&lt;sliceName,Slice&gt;&gt;    */
 DECL|method|getCollectionStates
 specifier|public
 name|Map
@@ -901,7 +958,7 @@ name|collectionStates
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Get names of the currently live nodes. 	 */
+comment|/**    * Get names of the currently live nodes.    */
 DECL|method|getLiveNodes
 specifier|public
 name|Set
@@ -920,7 +977,7 @@ name|liveNodes
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Get shardId for core. 	 * @param coreNodeName in the form of nodeName_coreName 	 */
+comment|/**    * Get shardId for core.    * @param coreNodeName in the form of nodeName_coreName    */
 DECL|method|getShardId
 specifier|public
 name|String
@@ -1019,7 +1076,7 @@ return|return
 literal|null
 return|;
 block|}
-comment|/** 	 * Check if node is alive.  	 */
+comment|/**    * Check if node is alive.     */
 DECL|method|liveNodesContain
 specifier|public
 name|boolean
@@ -1312,7 +1369,7 @@ name|toString
 argument_list|()
 return|;
 block|}
-comment|/** 	 * Create ClusterState by reading the current state from zookeeper.  	 */
+comment|/**    * Create ClusterState by reading the current state from zookeeper.     */
 DECL|method|load
 specifier|public
 specifier|static
@@ -1333,6 +1390,13 @@ name|KeeperException
 throws|,
 name|InterruptedException
 block|{
+name|Stat
+name|stat
+init|=
+operator|new
+name|Stat
+argument_list|()
+decl_stmt|;
 name|byte
 index|[]
 name|state
@@ -1347,7 +1411,7 @@ name|CLUSTER_STATE
 argument_list|,
 literal|null
 argument_list|,
-literal|null
+name|stat
 argument_list|,
 literal|true
 argument_list|)
@@ -1355,19 +1419,27 @@ decl_stmt|;
 return|return
 name|load
 argument_list|(
+name|stat
+operator|.
+name|getVersion
+argument_list|()
+argument_list|,
 name|state
 argument_list|,
 name|liveNodes
 argument_list|)
 return|;
 block|}
-comment|/** 	 * Create ClusterState from json string that is typically stored in zookeeper. 	 */
+comment|/**    * Create ClusterState from json string that is typically stored in zookeeper.    *     * Use {@link ClusterState#load(SolrZkClient, Set)} instead, unless you want to    * do something more when getting the data - such as get the stat, set watch, etc.    *     * @param version zk version of the clusterstate.json file (bytes)    * @param bytes clusterstate.json as a byte array    * @param liveNodes list of live nodes    * @return the ClusterState    */
 DECL|method|load
 specifier|public
 specifier|static
 name|ClusterState
 name|load
 parameter_list|(
+name|Integer
+name|version
+parameter_list|,
 name|byte
 index|[]
 name|bytes
@@ -1396,6 +1468,8 @@ return|return
 operator|new
 name|ClusterState
 argument_list|(
+name|version
+argument_list|,
 name|liveNodes
 argument_list|,
 name|Collections
@@ -1642,6 +1716,8 @@ return|return
 operator|new
 name|ClusterState
 argument_list|(
+name|version
+argument_list|,
 name|liveNodes
 argument_list|,
 name|state
@@ -1688,6 +1764,206 @@ name|String
 argument_list|>
 name|shardList
 decl_stmt|;
+block|}
+comment|/**    * The version of clusterstate.json in ZooKeeper.    *     * @return null if ClusterState was created for publication, not consumption    */
+DECL|method|getZkClusterStateVersion
+specifier|public
+name|Integer
+name|getZkClusterStateVersion
+parameter_list|()
+block|{
+return|return
+name|zkClusterStateVersion
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|hashCode
+specifier|public
+name|int
+name|hashCode
+parameter_list|()
+block|{
+specifier|final
+name|int
+name|prime
+init|=
+literal|31
+decl_stmt|;
+name|int
+name|result
+init|=
+literal|1
+decl_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+operator|(
+name|zkClusterStateVersion
+operator|==
+literal|null
+operator|)
+condition|?
+literal|0
+else|:
+name|zkClusterStateVersion
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+operator|(
+operator|(
+name|liveNodes
+operator|==
+literal|null
+operator|)
+condition|?
+literal|0
+else|:
+name|liveNodes
+operator|.
+name|hashCode
+argument_list|()
+operator|)
+expr_stmt|;
+return|return
+name|result
+return|;
+block|}
+annotation|@
+name|Override
+DECL|method|equals
+specifier|public
+name|boolean
+name|equals
+parameter_list|(
+name|Object
+name|obj
+parameter_list|)
+block|{
+if|if
+condition|(
+name|this
+operator|==
+name|obj
+condition|)
+return|return
+literal|true
+return|;
+if|if
+condition|(
+name|obj
+operator|==
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|getClass
+argument_list|()
+operator|!=
+name|obj
+operator|.
+name|getClass
+argument_list|()
+condition|)
+return|return
+literal|false
+return|;
+name|ClusterState
+name|other
+init|=
+operator|(
+name|ClusterState
+operator|)
+name|obj
+decl_stmt|;
+if|if
+condition|(
+name|zkClusterStateVersion
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|zkClusterStateVersion
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|zkClusterStateVersion
+operator|.
+name|equals
+argument_list|(
+name|other
+operator|.
+name|zkClusterStateVersion
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|liveNodes
+operator|==
+literal|null
+condition|)
+block|{
+if|if
+condition|(
+name|other
+operator|.
+name|liveNodes
+operator|!=
+literal|null
+condition|)
+return|return
+literal|false
+return|;
+block|}
+elseif|else
+if|if
+condition|(
+operator|!
+name|liveNodes
+operator|.
+name|equals
+argument_list|(
+name|other
+operator|.
+name|liveNodes
+argument_list|)
+condition|)
+return|return
+literal|false
+return|;
+return|return
+literal|true
+return|;
 block|}
 block|}
 end_class
