@@ -284,6 +284,19 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|zookeeper
+operator|.
+name|data
+operator|.
+name|Stat
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
 name|slf4j
 operator|.
 name|Logger
@@ -1087,6 +1100,13 @@ name|thisWatch
 init|=
 name|this
 decl_stmt|;
+name|Stat
+name|stat
+init|=
+operator|new
+name|Stat
+argument_list|()
+decl_stmt|;
 name|byte
 index|[]
 name|data
@@ -1099,7 +1119,7 @@ name|CLUSTER_STATE
 argument_list|,
 name|thisWatch
 argument_list|,
-literal|null
+name|stat
 argument_list|,
 literal|true
 argument_list|)
@@ -1111,6 +1131,11 @@ name|ClusterState
 operator|.
 name|load
 argument_list|(
+name|stat
+operator|.
+name|getVersion
+argument_list|()
+argument_list|,
 name|data
 argument_list|,
 name|ZkStateReader
@@ -1351,6 +1376,15 @@ init|=
 operator|new
 name|ClusterState
 argument_list|(
+name|ZkStateReader
+operator|.
+name|this
+operator|.
+name|clusterState
+operator|.
+name|getZkClusterStateVersion
+argument_list|()
+argument_list|,
 name|liveNodesSet
 argument_list|,
 name|ZkStateReader
@@ -1620,6 +1654,15 @@ operator|=
 operator|new
 name|ClusterState
 argument_list|(
+name|ZkStateReader
+operator|.
+name|this
+operator|.
+name|clusterState
+operator|.
+name|getZkClusterStateVersion
+argument_list|()
+argument_list|,
 name|liveNodesSet
 argument_list|,
 name|ZkStateReader
@@ -1779,6 +1822,15 @@ operator|=
 operator|new
 name|ClusterState
 argument_list|(
+name|ZkStateReader
+operator|.
+name|this
+operator|.
+name|clusterState
+operator|.
+name|getZkClusterStateVersion
+argument_list|()
+argument_list|,
 name|liveNodesSet
 argument_list|,
 name|ZkStateReader
